daas-helm-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ui
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - hosts:
    - test.daidemo.com
    secretName: ui-tls
  rules:
  - host: test.daidemo.com
    http:
      paths:
      - path:  /demoservice/*
        backend:
          serviceName: server-cluster-ip-service
          servicePort: 8081
        pathType: "Prefix"      

      - path: /*
        backend:
          serviceName: client-cluster-ip-service
          servicePort: 3000
        pathType: "Prefix"
